<resources>
    <string name="app_name">ToruShoppingApp</string>
    <string name="login">Login</string>
    <string name="hint_search_product">Search product…</string>
    <string name="to_do">To Do</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="see_all">See all</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="enter_your_discount_code">Enter your Discount Code</string>
    <string name="apply">Apply</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register_here">Don\'t have an account? Register here</string>
    <string name="order_id">Order ID</string>
    <string name="total_price">Total price</string>
    <string name="status">Status</string>
    <string name="order_details">Order Details</string>
    <string name="no_products_found">No products found</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="title">Title</string>
    <string name="placeholder_price">$-</string>
    <string name="title_order">Order</string>
    <string name="title_list">List</string>
    <string name="register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="logout">Log Out</string>
    <string name="hint_username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="write_a_comment_or_review">Write a comment or review</string>
    <string name="no_reviews">No reviews for this product</string>
    <string name="ordered_date">Date Ordered</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="app_theme">App Theme</string>
</resources>